--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
       -webkit-backdrop-filter: blur(10px);
     }
     .header img.logo {
-      width: 40px;
-      height: 40px;
+      width: 50px;
+      height: 50px;
       object-fit: contain;
     }
     .header h1 {
@@ -276,9 +276,9 @@
   </form>
   </main>
   <footer class="footer">
-    <p><strong>Contacto:</strong> laboratorio@universidad.edu.ec</p>
-    <p><strong>Teléfono:</strong> +593 0000 000000</p>
-    <p><strong>Ubicación:</strong> Laboratorio Central de la Universidad - Tena, Ecuador</p>
+    <p><strong>Contacto:</strong> thomas.garzon@ikiam.edu.ec</p>
+    <p><strong>Teléfono:</strong> 0959546317</p>
+    <p><strong>Ubicación:</strong> Laboratorio Quimica 1 de Docencia - Tena, Ecuador</p>
   </footer>
   <script>
     const WEB_APP_URL = 'https://script.google.com/macros/s/AKfycbxWhkn_HLyogNUYfzoZlypV6BxK4TXt4Gyi8--fLwJRXWKskePsWrLwOeaBXK4El3mhag/exec';
