--- a/registro-uso.html
+++ b/registro-uso.html
@@ -17,7 +17,8 @@
       margin: 0;
       padding: 0;
       font-family: 'Inter', sans-serif;
-      background: linear-gradient(135deg, #e8f0fe 0%, #f5faff 100%);
+      /* Imagen de fondo para dar continuidad visual al sitio */
+      background: url('fondo.png') no-repeat center/cover fixed;
       min-height: 100vh;
       display: flex;
       flex-direction: column;
