--- a/material.html
+++ b/material.html
@@ -18,22 +18,55 @@
       margin: 0;
       padding: 0;
       font-family: 'Inter', sans-serif;
-      background: linear-gradient(135deg, #e8f0fe 0%, #f5faff 100%);
+      /* Fondo con imagen difuminada */
+      background: url('fondo.png') no-repeat center/cover fixed;
       min-height: 100vh;
       display: flex;
       flex-direction: column;
     }
+    /* Encabezado con logos y efecto glass */
     header {
+      position: sticky;
+      top: 0;
+      z-index: 100;
+      width: 100%;
       display: flex;
+      justify-content: space-between;
       align-items: center;
-      gap: 0.5rem;
       padding: 0.75rem 1rem;
-      background: rgba(255,255,255,0.5);
+      background: rgba(255,255,255,0.4);
       backdrop-filter: blur(10px);
       -webkit-backdrop-filter: blur(10px);
       border-bottom: 1px solid rgba(255,255,255,0.3);
     }
-    header h1 { margin: 0; font-size: 1.2rem; }
+    .header-left {
+      display: flex;
+      align-items: center;
+      gap: 0.5rem;
+    }
+    .back-btn {
+      background: none;
+      border: none;
+      color: var(--primary);
+      font-size: 1.2rem;
+      cursor: pointer;
+      margin-right: 0.5rem;
+    }
+    .header-left img {
+      width: 40px;
+      height: 40px;
+      object-fit: contain;
+    }
+    header h1 {
+      margin: 0;
+      font-size: 1.3rem;
+      color: #001d3a;
+      font-weight: 500;
+    }
+    .header-right img {
+      width: 70px;
+      object-fit: contain;
+    }
     main {
       flex-grow: 1;
       padding: 1rem;
@@ -76,21 +109,61 @@
     }
     button:hover { background: var(--primary-dark); }
     .actions { display: flex; justify-content: flex-end; gap: 0.5rem; margin-top: 1.5rem; }
-    .material-image {
+    /* Nuevo layout para mostrar imagen a la derecha */
+    .step2-content {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 1rem;
+      align-items: flex-start;
+    }
+    .step-details {
+      flex: 1 1 60%;
+    }
+    .step-image {
+      flex: 1 1 40%;
+      display: flex;
+      justify-content: center;
+    }
+    .step-image img {
       width: 100%;
-      max-height: 250px;
-      object-fit: cover;
+      height: auto;
+      max-height: 300px;
+      object-fit: contain;
       border-radius: var(--radius);
-      margin-bottom: 1rem;
+    }
+    @media (max-width: 640px) {
+      .step2-content {
+        flex-direction: column;
+      }
+      .step-details, .step-image {
+        flex: 1 1 100%;
+      }
     }
     .summary ul { list-style: none; padding: 0; margin: 0; }
     .summary li { margin-bottom: 0.5rem; }
+
+    footer {
+      text-align: center;
+      padding: 1rem;
+      font-size: 0.85rem;
+      color: #555;
+      background: rgba(255,255,255,0.4);
+      backdrop-filter: blur(10px);
+      -webkit-backdrop-filter: blur(10px);
+      border-top: 1px solid rgba(255,255,255,0.3);
+    }
   </style>
 </head>
 <body>
   <header>
-    <button id="backHomeMat" aria-label="Volver al inicio" style="background:none;border:none;color:#007bff;font-size:1rem;cursor:pointer">← Inicio</button>
-    <h1>Material de laboratorio</h1>
+    <div class="header-left">
+      <button id="backHomeMat" class="back-btn" aria-label="Volver al inicio">←</button>
+      <img src="logo.png" alt="Logo del laboratorio" loading="lazy">
+      <h1>Material de laboratorio</h1>
+    </div>
+    <div class="header-right">
+      <img src="ikiam-logo.png" alt="Ikiam" loading="lazy">
+    </div>
   </header>
   <main>
     <!-- Paso 1: Búsqueda -->
@@ -106,35 +179,44 @@
     <!-- Paso 2: Detalle y acción -->
     <div class="card hidden" id="matStep2">
       <h2 id="matNombre">Material</h2>
-      <img id="matImg" class="material-image" src="" alt="Imagen del material" loading="lazy">
-      <label for="matAccion">Tipo de acción</label>
-      <select id="matAccion">
-        <option value="">– selecciona –</option>
-        <option value="Solicitud">Solicitud</option>
-        <option value="Registro">Registro</option>
-      </select>
-      <!-- Solicitud form -->
-      <div id="matFormSolicitud" class="hidden">
-        <label for="matRango">Rango de fechas</label>
-        <input type="text" id="matRango" placeholder="Selecciona rango" readonly>
-        <label for="matCantidadSol">Cantidad</label>
-        <input type="number" id="matCantidadSol" min="0" step="0.1" placeholder="Cantidad">
-      </div>
-      <!-- Registro form -->
-      <div id="matFormRegistro" class="hidden">
-        <label for="matFechaUso">Fecha de uso</label>
-        <input type="text" id="matFechaUso" placeholder="dd/mm/aaaa" readonly>
-        <label for="matCantidadReg">Cantidad</label>
-        <input type="number" id="matCantidadReg" min="0" step="0.1" placeholder="Cantidad">
-        <label for="matActividad">Actividad</label>
-        <select id="matActividad">
-          <option value="">– selecciona –</option>
-          <option value="Práctica de laboratorio">Práctica de laboratorio</option>
-          <option value="Proyecto">Proyecto</option>
-          <option value="Tesis">Tesis</option>
-        </select>
-        <label for="matDescripcion">Actividad que se realizó</label>
-        <input type="text" id="matDescripcion" placeholder="Descripción">
+      <div class="step2-content">
+        <div class="step-details">
+          <label for="matAccion">Tipo de acción</label>
+          <select id="matAccion">
+            <option value="">– selecciona –</option>
+            <option value="Solicitud">Solicitud</option>
+            <option value="Registro">Registro</option>
+          </select>
+          <!-- Solicitud form -->
+          <div id="matFormSolicitud" class="hidden">
+            <label for="matRango">Rango de fechas</label>
+            <input type="text" id="matRango" placeholder="Selecciona rango" readonly>
+            <label for="matCantidadSol">Cantidad</label>
+            <input type="number" id="matCantidadSol" min="0" step="0.1" placeholder="Cantidad">
+          </div>
+          <!-- Registro form (solo fecha de uso y cantidad) -->
+          <div id="matFormRegistro" class="hidden">
+            <label for="matFechaUso">Fecha de uso</label>
+            <input type="text" id="matFechaUso" placeholder="dd/mm/aaaa" readonly>
+            <label for="matCantidadReg">Cantidad</label>
+            <input type="number" id="matCantidadReg" min="0" step="0.1" placeholder="Cantidad">
+          </div>
+          <!-- Grupo de actividad (se muestra para Solicitud y Registro) -->
+          <div id="matActividadGroup" class="hidden">
+            <label for="matActividad">Actividad</label>
+            <select id="matActividad">
+              <option value="">– selecciona –</option>
+              <option value="Práctica de laboratorio">Práctica de laboratorio</option>
+              <option value="Proyecto">Proyecto</option>
+              <option value="Tesis">Tesis</option>
+            </select>
+            <label for="matDescripcion">Actividad que se realizó</label>
+            <input type="text" id="matDescripcion" placeholder="Descripción">
+          </div>
+        </div>
+        <div class="step-image">
+          <img id="matImg" src="" alt="Imagen del material" loading="lazy">
+        </div>
       </div>
       <div class="actions">
         <button id="matCancelStep2">Cancelar</button>
@@ -158,6 +240,11 @@
       </div>
     </div>
   </main>
+  <footer>
+    <p><strong>Contacto:</strong> thomas.garzon@ikiam.edu.ec</p>
+    <p><strong>Teléfono:</strong> 0959546317</p>
+    <p><strong>Ubicación:</strong> Laboratorio Química 1 de Docencia – Tena, Ecuador</p>
+  </footer>
   <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
   <script type="module" src="material.js"></script>
 </body>
