--- a/reactivos.html
+++ b/reactivos.html
@@ -18,22 +18,55 @@
       margin: 0;
       padding: 0;
       font-family: 'Inter', sans-serif;
-      background: linear-gradient(135deg, #e8f0fe 0%, #f5faff 100%);
+      /* Fondo con imagen difuminada */
+      background: url('fondo.png') no-repeat center/cover fixed;
       min-height: 100vh;
       display: flex;
       flex-direction: column;
     }
+    /* Encabezado con logos y efecto glass */
     header {
+      position: sticky;
+      top: 0;
+      z-index: 100;
+      width: 100%;
       display: flex;
+      justify-content: space-between;
       align-items: center;
-      gap: 0.5rem;
       padding: 0.75rem 1rem;
-      background: rgba(255,255,255,0.5);
+      background: rgba(255,255,255,0.4);
       backdrop-filter: blur(10px);
       -webkit-backdrop-filter: blur(10px);
       border-bottom: 1px solid rgba(255,255,255,0.3);
     }
-    header h1 { margin: 0; font-size: 1.2rem; }
+    .header-left {
+      display: flex;
+      align-items: center;
+      gap: 0.5rem;
+    }
+    .back-btn {
+      background: none;
+      border: none;
+      color: var(--primary);
+      font-size: 1.2rem;
+      cursor: pointer;
+      margin-right: 0.5rem;
+    }
+    .header-left img {
+      width: 40px;
+      height: 40px;
+      object-fit: contain;
+    }
+    header h1 {
+      margin: 0;
+      font-size: 1.3rem;
+      color: #001d3a;
+      font-weight: 500;
+    }
+    .header-right img {
+      width: 70px;
+      object-fit: contain;
+    }
     main {
       flex-grow: 1;
       padding: 1rem;
@@ -76,21 +109,74 @@
       transition: background 0.3s ease;
     }
     button:hover { background: var(--primary-dark); }
-    .reactivo-image {
+    /* Nuevo layout para mostrar imagen a la derecha */
+    .step2-content {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 1rem;
+      align-items: flex-start;
+    }
+    .step-details {
+      flex: 1 1 60%;
+    }
+    .step-image {
+      flex: 1 1 40%;
+      display: flex;
+      justify-content: center;
+    }
+    .step-image img {
       width: 100%;
-      max-height: 250px;
-      object-fit: cover;
+      height: auto;
+      max-height: 300px;
+      object-fit: contain;
       border-radius: var(--radius);
-      margin-bottom: 1rem;
+    }
+    /* Estilo para el contenedor del checkbox de reactivo controlado */
+    #reacControlWrap {
+      margin-top: 1rem;
+      display: flex;
+      flex-direction: column;
+      gap: 0.5rem;
+    }
+    #reacControlWrap .control-checkbox {
+      display: flex;
+      align-items: center;
+      gap: 0.5rem;
+      font-weight: 500;
+    }
+    @media (max-width: 640px) {
+      .step2-content {
+        flex-direction: column;
+      }
+      .step-details, .step-image {
+        flex: 1 1 100%;
+      }
     }
     .summary ul { list-style: none; padding: 0; margin: 0; }
     .summary li { margin-bottom: 0.5rem; }
+
+    footer {
+      text-align: center;
+      padding: 1rem;
+      font-size: 0.85rem;
+      color: #555;
+      background: rgba(255,255,255,0.4);
+      backdrop-filter: blur(10px);
+      -webkit-backdrop-filter: blur(10px);
+      border-top: 1px solid rgba(255,255,255,0.3);
+    }
   </style>
 </head>
 <body>
   <header>
-    <button id="backHomeReact" aria-label="Volver al inicio" style="background:none;border:none;color:#007bff;font-size:1rem;cursor:pointer">← Inicio</button>
-    <h1>Reactivos</h1>
+    <div class="header-left">
+      <button id="backHomeReact" class="back-btn" aria-label="Volver al inicio">←</button>
+      <img src="logo.png" alt="Logo del laboratorio" loading="lazy">
+      <h1>Reactivos</h1>
+    </div>
+    <div class="header-right">
+      <img src="ikiam-logo.png" alt="Ikiam" loading="lazy">
+    </div>
   </header>
   <main>
     <!-- Paso 1 -->
@@ -106,40 +192,52 @@
     <!-- Paso 2: Detalle y acción -->
     <div class="card hidden" id="reacStep2">
       <h2 id="reacNombre">Reactivo</h2>
-      <img id="reacImg" class="reactivo-image" src="" alt="Imagen del reactivo" loading="lazy">
-      <label for="reacAccion">Tipo de acción</label>
-      <select id="reacAccion">
-        <option value="">– selecciona –</option>
-        <option value="Solicitud">Solicitud</option>
-        <option value="Registro">Registro</option>
-      </select>
-      <!-- Formulario común a solicitud y registro -->
-      <div id="reacFormCommon" class="hidden">
-        <label for="reacCantidad">Cantidad</label>
-        <input type="number" id="reacCantidad" min="0" step="0.01" placeholder="Cantidad">
-        <label for="reacUnidad">Unidad</label>
-        <select id="reacUnidad">
-          <option value="">– unidad –</option>
-          <option value="g">g</option>
-          <option value="mg">mg</option>
-          <option value="mL">mL</option>
-          <option value="L">L</option>
-          <option value="otro">Otro</option>
-        </select>
-        <div id="unidadOtroDiv" class="hidden">
-          <label for="reacUnidadOtro">Especificar unidad</label>
-          <input type="text" id="reacUnidadOtro" placeholder="Unidad">
+      <div class="step2-content">
+        <div class="step-details">
+          <label for="reacAccion">Tipo de acción</label>
+          <select id="reacAccion">
+            <option value="">– selecciona –</option>
+            <option value="Solicitud">Solicitud</option>
+            <option value="Registro">Registro</option>
+          </select>
+          <!-- Formulario común a solicitud y registro -->
+            <div id="reacFormCommon" class="hidden">
+            <label for="reacCantidad">Cantidad</label>
+            <input type="number" id="reacCantidad" min="0" step="0.01" placeholder="Cantidad">
+            <label for="reacUnidad">Unidad</label>
+            <select id="reacUnidad">
+              <option value="">– unidad –</option>
+              <option value="g">g</option>
+              <option value="mg">mg</option>
+              <option value="mL">mL</option>
+              <option value="L">L</option>
+              <option value="otro">Otro</option>
+            </select>
+            <!-- Contenedor de reactivo controlado: se ubica inmediatamente después de la unidad -->
+            <div id="reacControlWrap">
+              <label for="reacControlado" class="control-checkbox">
+                <input type="checkbox" id="reacControlado">
+                Reactivo controlado
+              </label>
+              <div id="reacFileDiv" class="hidden">
+                <label for="reacFile">Solicitud de reactivo (PDF/imagen)</label>
+                <input type="file" id="reacFile" accept="application/pdf,image/*">
+              </div>
+            </div>
+            <div id="unidadOtroDiv" class="hidden">
+              <label for="reacUnidadOtro">Especificar unidad</label>
+              <input type="text" id="reacUnidadOtro" placeholder="Unidad">
+            </div>
+          </div>
+          <!-- Campo específico para Solicitud -->
+          <div id="reacFormSolicitud" class="hidden">
+            <label for="reacLabDestino">Laboratorio de destino</label>
+            <input type="text" id="reacLabDestino" placeholder="Laboratorio de destino">
+          </div>
         </div>
-        <label><input type="checkbox" id="reacControlado"> Reactivo controlado</label>
-        <div id="reacFileDiv" class="hidden">
-          <label for="reacFile">Solicitud de reactivo (PDF/imagen)</label>
-          <input type="file" id="reacFile" accept="application/pdf,image/*">
+        <div class="step-image">
+          <img id="reacImg" src="" alt="Imagen del reactivo" loading="lazy">
         </div>
-      </div>
-      <!-- Campo específico para Solicitud -->
-      <div id="reacFormSolicitud" class="hidden">
-        <label for="reacLabDestino">Laboratorio de destino</label>
-        <input type="text" id="reacLabDestino" placeholder="Laboratorio de destino">
       </div>
       <div class="actions">
         <button id="reacCancelStep2">Cancelar</button>
@@ -172,6 +270,11 @@
       </div>
     </div>
   </main>
+  <footer>
+    <p><strong>Contacto:</strong> thomas.garzon@ikiam.edu.ec</p>
+    <p><strong>Teléfono:</strong> 0959546317</p>
+    <p><strong>Ubicación:</strong> Laboratorio Química 1 de Docencia – Tena, Ecuador</p>
+  </footer>
   <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
   <script type="module" src="reactivos.js"></script>
 </body>
